project(level1)

add_executable(p01_running_letter p01_running_letter/main.c
        p01_running_letter/p01_sol1.cpp)

add_executable(p02_is_prime p02_is_prime/main.c
        p02_is_prime/p02_sol1.cpp)

add_executable(p03_all_primes p03_all_primes/main.c
        p03_all_primes/p03_sol1.cpp)

add_executable(p04_goldbach p04_goldbach/main.c
        p04_goldbach/p04_sol1.cpp)

add_executable(p05_encrypt_decrypt p05_encrypt_decrypt/main.c
        p05_encrypt_decrypt/p05_sol1.cpp)

add_executable(p06_hanoi p06_hanoi/main.c
        p06_hanoi/p06_sol1.cpp)

add_executable(p07_maze p07_maze/main.c
        p07_maze/p07_sol1.cpp)

add_executable(p08_push_boxes p08_push_boxes/main.c
        p08_push_boxes/p08_sol1.cpp)

add_executable(p09_linked_list p09_linked_list/main.c
        p09_linked_list/p09_sol1.cpp)

add_executable(p10_warehouse p10_warehouse/main.c)